force-app/src/objects/AggregateResult__c.object
<CustomObject>
    <fields>
        <fullName>AccreditationOutcome__c</fullName>
        <description>Current Accreditation Outcome, this does not include recommendations.</description>
        <inlineHelpText>Current Accreditation Outcome, this does not include recommendations.</inlineHelpText>
        <label>Accreditation Outcome</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accreditation_Status__c</fullName>
        <label>Accreditation Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentAccreditationTrackName__c</fullName>
        <label>Current Accreditation Track Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentIAC__c</fullName>
        <label>Current IAC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentSSA__c</fullName>
        <label>Current SSA</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentStageName__c</fullName>
        <label>Current Stage Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active_Membership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Membership(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_Application_Fee_Invoice_Date__c</fullName>
        <label>Membership Application Fee Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Application_Fee_Status__c</fullName>
        <label>Membership Application Fee Status</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Application_Fee__c</fullName>
        <label>Membership Application Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Fee_Invoice_Date__c</fullName>
        <label>Membership Fee Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Fee_Status__c</fullName>
        <label>Membership Fee Status</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Fee__c</fullName>
        <label>Membership Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Rejoin_Date__c</fullName>
        <label>Membership Rejoin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Renewal_Date__c</fullName>
        <label>Membership Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Status__c</fullName>
        <label>Membership Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Visit_Fee_Invoice_Date__c</fullName>
        <label>Membership Visit Fee Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Visit_Fee_Status__c</fullName>
        <label>Membership Visit Fee Status</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Visit_Fee__c</fullName>
        <label>Membership Visit Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Withdrawal_Date__c</fullName>
        <label>Membership Withdrawal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Accreditation_Date__c</fullName>
        <label>Original Accreditation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Membership_Start_Date__c</fullName>
        <label>Original Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reaccreditation_Date__c</fullName>
        <label>Re-Accreditation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nAccreditation__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Accreditation(s)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nMembership__c</fullName>
        <label># Membership(s)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Aggregate Result</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Aggregate Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aggregate Results</pluralLabel>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>